# see: https://setuptools.readthedocs.io/en/latest/setuptools.html#specifying-values
[metadata]
name = pyinspect
version = file:VERSION

summary = -
long_description = file:README.md
long_description_content_type = text/markdown

url = https://github.com/podhmo/pyinspect
author = podhmo
author_email = ababjam61+github@gmail.com

[options]
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    pyinspect = pyinspect.cli:main

[bdist_wheel]
universal=0